@@ -48,3 +48,5 @@
 	program entry.
 2017-09-22 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.2.
+2017-08-02 Fred Gleason <fredg@paravelsystems.com>
+	* Made the 'List Hosts' dialog sortable.
